refactor: manage follows with websocket connections instead of sending messages from WebUI